--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                         <a href="#"><i class="fab fa-twitter fa-2x text-info mx-3"></i></a>
                         <a href="#"><i class="fab fa-youtube fa-2x text-danger mx-3"></i></a>
                     </div>
-                    <p class="text-light py-4 m-0">&copy;Copyright 2018 - Made by CodeAndCreate</p>
+                    <p class="text-light py-4 m-0">&copy;Copyright 2019 - <a href="https://github.com/SimonielMusyoki/">SimonielMusyoki</a></p>
                 </div>
             </div>
         </div>
